[ Key ]
* = Change or information
+ = Addition
! = Bug Fix

[ July 26, 2004 - 0.11.4 ]
    + Added 'useRegex' attribute to the Match tag. Matches can now use regular
      expressions to match filenames.

[ May 11, 2004 - 0.11.3 ]
    ! Fixed a bug where I was writing the wrong property name for a projects root
      namespace.
    ! Removed a DEBUG statement I had left in the code in 0.11.2.
    ! Fixed a bug in the VS2002 writer which caused the version variables to not
      be overriden correctly.
    + Added the rootNamespace property to the <Project> element, allowing you to
      specify the root namespace.
    * /target and /clean are now mutually exclusive command line switches, and
      they both now take the all option. In the case of /target all, all build
      file for all targets will be created. In the case of /clean all, the user
      will be prompted to make sure they want to do it, and if so, will clean
      all build files for all targets.

[ April 22, 2004 - 0.11.2 ]
    ! Fixed a bug with the /file command-line operator. Was using the unresolved
      file path rather then the resolved one, was making the attempt to open the
      dnpb file fail.
    ! Fixed a bug in the schema that required at least 1 solution and 1 reference
      path. We can do just fine with 0 of either of these. Some files may be all
      <Process> statements and not have any <Solution> tags.
    ! Fixed a bug that caused the project references not to be written with the
      SharpDevelop target.
    * Changed the schema to version 1.2, allowing for Configuration nodes to exist
      under project nodes. The inheritance of values is hierarchical. Meaning, if
      you define a configuration named Debug at the Soltion level, and one by the
      same name at the Project level, the one at the Project level will first
      inherit the options of the Solution level configuration, then set it's own